# gwtrader

./: .gitignore  README.md  gwtrader.cabal
src/: ApiDbService.hs  GWApi.hs  Item.hs  Listing.hs  Main.hs  Market.hs  Recipe.hs
src/GW/API/: Commerce.hs  DbService.hs  Item.hs  Recipe.hs
