name:                 gwtrader
version:              0.1.0.0
cabal-version:        >=1.22.4.0
build-type:           Simple
license:              BSD3
license-file:         LICENSE
copyright:            Copyight (C) 2015 Gabriel Anderson
maintainer:           ganderson@go.shoreline.edu
category:             game
author:               Gabriel Anderson
data-dir:             data

source-repository     head
    type:             git
    location:         https://www.github.com:andgate/gwtrader.git

executable            gwtrader
  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010

  build-depends:      aeson >=0.9 && < 0.10,
                      base <5,
                      bytestring >=0.10 && <0.11,
                      containers ==0.5.*,
                      directory ==1.2.*,
                      filepath ==1.4.*,
                      hashtables >=1.1 && <1.3,
                      http-conduit >= 2 && < 3,
                      lens >=4.0 && <4.13,
                      linear >=1.19.1.3 && <1.20,
                      text ==1.2.*,
                      transformers >=0.4 && <0.5,
                      unordered-containers ==0.2.*,
                      vector >0.10 && <0.11,
                      yaml ==0.8.*

  default-extensions: OverloadedStrings
                      UnicodeSyntax
                      PostfixOperators
                      TupleSections
                      PackageImports
                      RecursiveDo
                      LambdaCase
                      MultiWayIf
                      TemplateHaskell

  ghc-options:        -Wall
                      -fwarn-tabs
